--- a/Crop_classification.ipynb
+++ b/Crop_classification.ipynb
@@ -16,7 +16,9 @@
         "id": "tvxH7T7gO92e"
       },
       "source": [
-        "### To determine the outcome of the harvest season, i.e. whether the crop would be healthy (alive), damaged by pesticides or damaged by other reasons."
+        "### To determine the outcome of the harvest season, i.e. whether the crop would be healthy (alive), damaged by pesticides or damaged by other reasons.\n",
+        "\n",
+        "Modified version for the course 'Quantitative Decision Making in Agricultural Business' at HU-Berlin. Original version can be found here: https://github.com/priyalagarwal27/Crop-Detection-and-Prediction-using-Classification- "
       ]
     },
     {
@@ -456,9 +458,7 @@
         "id": "Yl2cBW1LO92i"
       },
       "source": [
-        "Observation:\n",
-        "    \n",
-        "    1. Number_Weeks_Used has 9000  missing data."
+        "**3. Do we have missing data? And how we can handle this?**"
       ]
     },
     {
@@ -517,9 +517,7 @@
         "id": "liMJd5k_O92j"
       },
       "source": [
-        "Observation:\n",
-        "    \n",
-        "    Clearly ,there are no null values present in the dataset."
+        "**1. What can you say about the data set?**"
       ]
     },
     {
@@ -670,13 +668,7 @@
         "id": "BB3ihW8cO92l"
       },
       "source": [
-        "Observation:\n",
-        "\n",
-        "    1.Estimated_Insects_count,Pesticide_use_category and Number_weeks_used are positively correlated with Crop damage.\n",
-        "    \n",
-        "    2.Number_weeks_used  is positively correlated with Estimated_Insects_count and Pesticide_use_category. \n",
-        "    \n",
-        "    3.Number_weeks_Quit is highly negatively correlated with Pesticide_use_category and Number_weeks_used."
+        "**2. Describe the observations**"
       ]
     },
     {
@@ -1425,7 +1417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "uDx7o5CpO92p"
       },
