--- a/QuantitativeTutorial.ipynb
+++ b/QuantitativeTutorial.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 7,
       "source": [
         "# Set the numpy random seed\n",
         "np.random.seed(100)"
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "source": [
         "# Download data\n",
         "!wget -nc https://ilr-ml.s3.eu-central-1.amazonaws.com/brazil_all_data_v2.gz"
@@ -109,23 +109,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-01-29 20:43:06--  https://ilr-ml.s3.eu-central-1.amazonaws.com/brazil_all_data_v2.gz\n",
-            "Resolving ilr-ml.s3.eu-central-1.amazonaws.com (ilr-ml.s3.eu-central-1.amazonaws.com)... 52.219.170.54\n",
-            "Connecting to ilr-ml.s3.eu-central-1.amazonaws.com (ilr-ml.s3.eu-central-1.amazonaws.com)|52.219.170.54|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 283350352 (270M) [application/x-gzip]\n",
-            "Saving to: ‘brazil_all_data_v2.gz’\n",
-            "\n",
-            "brazil_all_data_v2. 100%[===================>] 270.22M  30.7MB/s    in 9.6s    \n",
-            "\n",
-            "2023-01-29 20:43:16 (28.1 MB/s) - ‘brazil_all_data_v2.gz’ saved [283350352/283350352]\n",
+            "File ‘brazil_all_data_v2.gz’ already there; not retrieving.\n",
             "\n"
           ]
         }
       ],
       "metadata": {
         "id": "gWJ6IasttlnW",
-        "outputId": "b11dadbf-dbae-4c43-fc8d-2481acd2aaa2",
+        "outputId": "556ddacf-c41c-4d5e-952d-22067650014f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -133,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "source": [
         "# Load data with pandas into a dataframe \n",
         "df = pd.read_parquet('brazil_all_data_v2.gz')"
@@ -152,14 +143,21 @@
       ],
       "metadata": {
         "id": "LajOmRxORIth",
-        "outputId": "e29691ea-c264-4ba8-8d5a-cb438ed4eca3",
+        "outputId": "8c34ca08-437b-40ca-e475-65fee2f5ed56",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 299
+          "height": 317
         }
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of rows: 249940\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -210,7 +208,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-54c0e4f3-ccf6-4928-8d7f-4bbf7aed7843\">\n",
+              "  <div id=\"df-44d5731c-24d1-48ee-adf9-b3812c3a3843\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -378,7 +376,7 @@
               "</table>\n",
               "<p>5 rows × 426 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-54c0e4f3-ccf6-4928-8d7f-4bbf7aed7843')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-44d5731c-24d1-48ee-adf9-b3812c3a3843')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -429,12 +427,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-54c0e4f3-ccf6-4928-8d7f-4bbf7aed7843 button.colab-df-convert');\n",
+              "          document.querySelector('#df-44d5731c-24d1-48ee-adf9-b3812c3a3843 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-54c0e4f3-ccf6-4928-8d7f-4bbf7aed7843');\n",
+              "          const element = document.querySelector('#df-44d5731c-24d1-48ee-adf9-b3812c3a3843');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -457,13 +455,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 10
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "source": [
         "# Define binary variable for deforestration in 2018\n",
         "df['D_defor_2018'] = df['defor_2018']>0\n",
@@ -476,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "source": [
         "# Define a list of features names (explantory variables)\n",
         "lstX = [\n",
@@ -520,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "source": [
         "# Split the data into train and test data using sklearn train_test_split object\n",
         "#   (see: https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html)\n",
@@ -535,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "source": [
         "# Scale data to 0-1 range using sklearn MinMaxScalar object \n",
         "# (see: https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html) \n",
@@ -564,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "source": [
         "# Fit a logistic regression model using sklearn \n",
         "# (see: https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html)\n",
@@ -583,12 +581,12 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 15
         }
       ],
       "metadata": {
         "id": "dSjHfg6PmxDA",
-        "outputId": "63967fa7-6094-4978-90ba-8a5474c77d3f",
+        "outputId": "6dd6178a-3513-4b8d-ab86-b00fd212edfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -596,7 +594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "source": [
         "# Define a function that prints the model statistics.\n",
         "# We will use the function below to always get the same model stats for each of\n",
@@ -620,7 +618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "source": [
         "# Use the function to print the model statistics for our logit model \n",
         "printOutput(modelLg,X_train,Y_train,X_test,Y_test)\n",
@@ -660,7 +658,7 @@
       ],
       "metadata": {
         "id": "toJ0q4YvoEs9",
-        "outputId": "0c69445f-af0a-40b5-e775-2eec0949a402",
+        "outputId": "3568db80-7bf2-4ee3-b7a2-2b67dc1dfc0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -668,7 +666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "source": [
         "# Plot the ROC curve\n",
         "plt.figure()\n",
@@ -700,7 +698,7 @@
       ],
       "metadata": {
         "id": "dR7Zu0K_6PKO",
-        "outputId": "f5dd5490-524c-4ee3-b792-feca2e9ce0bd",
+        "outputId": "adfc97b8-7519-495d-8428-3c23bf9838e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -718,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "source": [
         "# Fit a decision tree using sklearn\n",
         "# (see https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html)\n",
@@ -735,7 +733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "source": [
         "# Use the function to print the model statistics for our tree model \n",
         "printOutput(modelTree,X_train,Y_train,X_test,Y_test)"
@@ -758,7 +756,7 @@
       ],
       "metadata": {
         "id": "X45zdwZblFDK",
-        "outputId": "a24708f8-f1a8-43bc-c752-ddf52f378684",
+        "outputId": "4ea88f2b-5d39-4c52-e9f7-0978e2692296",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -775,7 +773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "source": [
         "# run a random forest using sklearn and default hyperparameters (note, this will take a few minutes)\n",
         "# (see https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html)\n",
@@ -793,7 +791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "source": [
         "# Print model output stats\n",
         "printOutput(modelForest,X_train,Y_train,X_test,Y_test)\n"
@@ -816,7 +814,7 @@
       ],
       "metadata": {
         "id": "OvZPmhHH96Yv",
-        "outputId": "ebba2071-d19b-4343-cc35-afec12dfc03e",
+        "outputId": "8ecf623f-d6ff-478b-b5ab-2240f7854bd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -824,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "source": [
         "# ====================\n",
         "# Discuss in the group\n",
@@ -839,7 +837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "source": [
         "# Plot ROC curve \n",
         "# Get the predicted probabiltities \n",
@@ -883,7 +881,7 @@
       ],
       "metadata": {
         "id": "1lqaLHLVdvKl",
-        "outputId": "d696880a-3df7-4b2f-a7f2-63e69f39774c",
+        "outputId": "603b0299-eb4c-4090-faa6-5ed510045770",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -901,7 +899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "source": [
         "# Generate a feature importance graph for the forest\n",
         "# Adjusted based on  https://scikit-learn.org/stable/auto_examples/ensemble/plot_forest_importances.html\n",
@@ -978,7 +976,7 @@
       ],
       "metadata": {
         "id": "QeXTB7BZsgc3",
-        "outputId": "7acd9c2a-50cc-44a5-b961-c561c63fd346",
+        "outputId": "f85f5c1f-5069-4983-9393-dc5293fd93f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 784
@@ -1005,7 +1003,16 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "72xMlq0sejcU"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
       "source": [
         "\n",
         "\n",
@@ -1032,22 +1039,22 @@
       "outputs": [
         {
           "output_type": "error",
-          "ename": "NameError",
+          "ename": "TypeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-7e2e9c885179>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mFEHLER\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# In the lecture part we have run a Random Forest that heavily\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# overfitted the training data. Adjust a hyperparamter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# and see if you can train a model that does not overfit.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'FEHLER' is not defined"
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-26-411ad0d20df2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m#  Print model stats output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mprintOutput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m...\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: printOutput() missing 4 required positional arguments: 'X_train', 'Y_train', 'X_test', and 'Y_test'"
           ]
         }
       ],
       "metadata": {
         "id": "dfVYG7QSay2e",
-        "outputId": "fddc1d9a-8d0c-4ecb-a91a-eacb5671b551",
+        "outputId": "3ab9fac2-78cb-431f-fa78-e0daa7466fb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 235
+          "height": 200
         }
       }
     },
