--- a/overfittingtutorial.ipynb
+++ b/overfittingtutorial.ipynb
@@ -1,193 +1,194 @@
-
-
-### Tutorial: Tackling Overfitting in Machine Learning using Random Forest and XGBoost
-
-Overfitting occurs when a machine learning model learns not just the underlying patterns in the data but also the noise, leading to poor generalization on unseen data. In this tutorial, we’ll explore techniques to mitigate overfitting using **Random Forest** and **XGBoost**.
-
----
-
-#### **Objective**
-Train Random Forest and XGBoost models on a dataset, identify overfitting, and apply techniques to reduce it.
-
-#### **Tools and Libraries**
-We'll use Python and the following libraries:
-- `pandas` and `numpy` for data handling
-- `sklearn` for preprocessing and Random Forest
-- `xgboost` for gradient boosting
-- `matplotlib` or `seaborn` for visualization
-
----
-
-### Step 1: Set Up the Environment
-```bash
-pip install pandas numpy scikit-learn xgboost matplotlib
-```
-
----
-
-### Step 2: Load and Prepare the Dataset
-We'll use the [UCI Housing Dataset](https://archive.ics.uci.edu/ml/datasets/Real+estate+valuation+data+set) as an example.
-
-```python
-import pandas as pd
-import numpy as np
-from sklearn.model_selection import train_test_split
-from sklearn.metrics import mean_squared_error
-
-# Load dataset
-url = "https://archive.ics.uci.edu/ml/machine-learning-databases/00477/Real%20estate%20valuation%20data%20set.xlsx"
-data = pd.read_excel(url)
-data.columns = ["Index", "TransactionDate", "HouseAge", "DistanceToMRT", "NumberOfStores", "Latitude", "Longitude", "Price"]
-data = data.drop("Index", axis=1)
-
-# Features and target
-X = data.drop("Price", axis=1)
-y = data["Price"]
-
-# Train-test split
-X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)
-```
-
----
-
-### Step 3: Train a Random Forest Model
-Random Forest, being an ensemble method, is less prone to overfitting but can still overfit if the trees are too deep.
-
-```python
-from sklearn.ensemble import RandomForestRegressor
-
-# Train a Random Forest model
-rf = RandomForestRegressor(n_estimators=100, random_state=42)
-rf.fit(X_train, y_train)
-
-# Evaluate
-train_preds = rf.predict(X_train)
-test_preds = rf.predict(X_test)
-
-print("Random Forest:")
-print(f"Train RMSE: {mean_squared_error(y_train, train_preds, squared=False):.2f}")
-print(f"Test RMSE: {mean_squared_error(y_test, test_preds, squared=False):.2f}")
-```
-
----
-
-### Step 4: Identify Overfitting
-Compare the Train RMSE and Test RMSE:
-- Large discrepancy indicates overfitting.
-
----
-
-### Step 5: Mitigate Overfitting in Random Forest
-Adjust parameters to control complexity:
-1. **Limit Tree Depth**: Use `max_depth`.
-2. **Reduce Features**: Use `max_features`.
-3. **Prune Trees**: Use `min_samples_split` and `min_samples_leaf`.
-
-```python
-rf_tuned = RandomForestRegressor(
-    n_estimators=100,
-    max_depth=10,
-    max_features=0.8,
-    min_samples_split=10,
-    min_samples_leaf=4,
-    random_state=42,
-)
-rf_tuned.fit(X_train, y_train)
-
-# Evaluate
-train_preds_tuned = rf_tuned.predict(X_train)
-test_preds_tuned = rf_tuned.predict(X_test)
-
-print("Tuned Random Forest:")
-print(f"Train RMSE: {mean_squared_error(y_train, train_preds_tuned, squared=False):.2f}")
-print(f"Test RMSE: {mean_squared_error(y_test, test_preds_tuned, squared=False):.2f}")
-```
-
----
-
-### Step 6: Train an XGBoost Model
-XGBoost provides regularization techniques (L1 and L2) to mitigate overfitting.
-
-```python
-import xgboost as xgb
-
-xgb_model = xgb.XGBRegressor(n_estimators=100, random_state=42)
-xgb_model.fit(X_train, y_train)
-
-# Evaluate
-train_preds_xgb = xgb_model.predict(X_train)
-test_preds_xgb = xgb_model.predict(X_test)
-
-print("XGBoost:")
-print(f"Train RMSE: {mean_squared_error(y_train, train_preds_xgb, squared=False):.2f}")
-print(f"Test RMSE: {mean_squared_error(y_test, test_preds_xgb, squared=False):.2f}")
-```
-
----
-
-### Step 7: Mitigate Overfitting in XGBoost
-Key hyperparameters to control overfitting:
-- `max_depth`: Maximum depth of the trees.
-- `min_child_weight`: Minimum sum of weights of all children of a node.
-- `gamma`: Minimum loss reduction required to make a split.
-- Regularization: `reg_alpha` (L1) and `reg_lambda` (L2).
-
-```python
-xgb_tuned = xgb.XGBRegressor(
-    n_estimators=100,
-    max_depth=6,
-    min_child_weight=3,
-    gamma=0.1,
-    reg_alpha=0.5,
-    reg_lambda=1.0,
-    random_state=42,
-)
-xgb_tuned.fit(X_train, y_train)
-
-# Evaluate
-train_preds_xgb_tuned = xgb_tuned.predict(X_train)
-test_preds_xgb_tuned = xgb_tuned.predict(X_test)
-
-print("Tuned XGBoost:")
-print(f"Train RMSE: {mean_squared_error(y_train, train_preds_xgb_tuned, squared=False):.2f}")
-print(f"Test RMSE: {mean_squared_error(y_test, test_preds_xgb_tuned, squared=False):.2f}")
-```
-
----
-
-### Step 8: Visualize Feature Importance
-Both models offer feature importance to understand key drivers of predictions.
-
-```python
-import matplotlib.pyplot as plt
-
-# Random Forest
-feature_importance_rf = rf_tuned.feature_importances_
-plt.barh(X.columns, feature_importance_rf)
-plt.title("Random Forest Feature Importance")
-plt.show()
-
-# XGBoost
-xgb.plot_importance(xgb_tuned)
-plt.title("XGBoost Feature Importance")
-plt.show()
-```
-
----
-
-### Step 9: Compare and Conclude
-- Check RMSE for both models before and after tuning.
-- Assess whether the gap between Train RMSE and Test RMSE has decreased.
-
----
-
-#### Key Takeaways
-1. **Random Forest**:
-   - Control tree depth, features, and minimum samples.
-   - Effective for datasets with moderate features and noise.
-
-2. **XGBoost**:
-   - Use regularization and hyperparameter tuning.
-   - Best for datasets with high complexity and large scale.
-
-By tuning hyperparameters, we can effectively address overfitting in both models and improve generalization to unseen data.
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tackling Overfitting in Machine Learning using Random Forest and XGBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objective\n",
+    "Train Random Forest and XGBoost models on a dataset, identify overfitting, and apply techniques to reduce it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1: Set Up the Environment\n",
+    "Install the required libraries:\n",
+    "```bash\n",
+    "pip install pandas numpy scikit-learn xgboost matplotlib\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Load and Prepare the Dataset\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Load dataset\n",
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/00477/Real%20estate%20valuation%20data%20set.xlsx'\n",
+    "data = pd.read_excel(url)\n",
+    "data.columns = ['Index', 'TransactionDate', 'HouseAge', 'DistanceToMRT', 'NumberOfStores', 'Latitude', 'Longitude', 'Price']\n",
+    "data = data.drop('Index', axis=1)\n",
+    "\n",
+    "# Features and target\n",
+    "X = data.drop('Price', axis=1)\n",
+    "y = data['Price']\n",
+    "\n",
+    "# Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: Train a Random Forest Model\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# Train a Random Forest model\n",
+    "rf = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
+    "train_preds = rf.predict(X_train)\n",
+    "test_preds = rf.predict(X_test)\n",
+    "\n",
+    "print('Random Forest:')\n",
+    "print(f'Train RMSE: {mean_squared_error(y_train, train_preds, squared=False):.2f}')\n",
+    "print(f'Test RMSE: {mean_squared_error(y_test, test_preds, squared=False):.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 5: Mitigate Overfitting in Random Forest\n",
+    "rf_tuned = RandomForestRegressor(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=10,\n",
+    "    max_features=0.8,\n",
+    "    min_samples_split=10,\n",
+    "    min_samples_leaf=4,\n",
+    "    random_state=42,\n",
+    ")\n",
+    "rf_tuned.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
+    "train_preds_tuned = rf_tuned.predict(X_train)\n",
+    "test_preds_tuned = rf_tuned.predict(X_test)\n",
+    "\n",
+    "print('Tuned Random Forest:')\n",
+    "print(f'Train RMSE: {mean_squared_error(y_train, train_preds_tuned, squared=False):.2f}')\n",
+    "print(f'Test RMSE: {mean_squared_error(y_test, test_preds_tuned, squared=False):.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 6: Train an XGBoost Model\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "xgb_model = xgb.XGBRegressor(n_estimators=100, random_state=42)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
+    "train_preds_xgb = xgb_model.predict(X_train)\n",
+    "test_preds_xgb = xgb_model.predict(X_test)\n",
+    "\n",
+    "print('XGBoost:')\n",
+    "print(f'Train RMSE: {mean_squared_error(y_train, train_preds_xgb, squared=False):.2f}')\n",
+    "print(f'Test RMSE: {mean_squared_error(y_test, test_preds_xgb, squared=False):.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 7: Mitigate Overfitting in XGBoost\n",
+    "xgb_tuned = xgb.XGBRegressor(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=6,\n",
+    "    min_child_weight=3,\n",
+    "    gamma=0.1,\n",
+    "    reg_alpha=0.5,\n",
+    "    reg_lambda=1.0,\n",
+    "    random_state=42,\n",
+    ")\n",
+    "xgb_tuned.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
+    "train_preds_xgb_tuned = xgb_tuned.predict(X_train)\n",
+    "test_preds_xgb_tuned = xgb_tuned.predict(X_test)\n",
+    "\n",
+    "print('Tuned XGBoost:')\n",
+    "print(f'Train RMSE: {mean_squared_error(y_train, train_preds_xgb_tuned, squared=False):.2f}')\n",
+    "print(f'Test RMSE: {mean_squared_error(y_test, train_preds_xgb_tuned, squared=False):.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 8: Visualize Feature Importance\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Random Forest\n",
+    "feature_importance_rf = rf_tuned.feature_importances_\n",
+    "plt.barh(X.columns, feature_importance_rf)\n",
+    "plt.title('Random Forest Feature Importance')\n",
+    "plt.show()\n",
+    "\n",
+    "# XGBoost\n",
+    "xgb.plot_importance(xgb_tuned)\n",
+    "plt.title('XGBoost Feature Importance')\n",
+    "plt.show()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
